src/components/search-result/search-result.scss
/**
 * @author Michael Gamlem III
 * @copyright This file is subject to the terms and conditions defined in file 'LICENSE', which is part of the source code for this project.
 * @format
 */

@use "../../styles/bootstrap.scss" as bootstrap;
@use "../../styles/variables" as variables;

.search-result {
	padding: variables.$margin-md;
	border-radius: bootstrap.$border-radius;
	color: bootstrap.$body-color;
	text-decoration: none;

	&:hover {
		background-color: bootstrap.$blue-100;
	}

	.bold {
		font-weight: bootstrap.$font-weight-bold;
	}

	.light {
		font-weight: bootstrap.$font-weight-light;
	}

	.italic {
		font-style: italic;
	}

	.line-2 {
		display: flex;
		justify-content: space-between;
		margin-bottom: variables.$margin-md;

		.details-container {
			display: flex;
			flex-direction: column;
		}
	}

	.details {
		overflow: hidden;
		text-overflow: ellipsis;
		white-space: nowrap;
		width: 100%;
	}
}

